feat: add auth middleware (#6)
